kubernetes/apps/selkies/desktop/app/deployment.yaml
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at https://mozilla.org/MPL/2.0/.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: selkies-gstreamer-egl
  namespace: desktop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: selkies-gstreamer-egl
  template:
    metadata:
      labels:
        app: selkies-gstreamer-egl
    spec:
      # hostname: egl
      runtimeClassName: nvidia
      # Uncomment the below line to disable network isolation for WebRTC connectivity, may show an error if disallowed by the cluster
      # hostNetwork: true
      containers:
        - name: egl
          image: ghcr.io/selkies-project/nvidia-egl-desktop:latest
          imagePullPolicy: Always
          stdin: true
          tty: true
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources:
            limits:
              memory: 16Gi
              cpu: "8"
              nvidia.com/gpu: 1
            requests:
              memory: 100Mi
              cpu: 100m
          volumeMounts:
            - mountPath: /dev/shm
              name: dshm
            - mountPath: /cache
              name: selkies-volume
              subPath: cache
            - mountPath: /home/user
              name: selkies-volume
              subPath: home
      volumes:
        - name: dshm
          emptyDir:
            medium: Memory
        - name: selkies-volume
          persistentVolumeClaim:
            claimName: selkies-claim
