kubernetes/apps/selkies/desktop/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: desktop
  name: desktop
  namespace: desktop
spec:
  ports:
    - name: http
      port: 8080
  selector:
    app: selkies-gstreamer-egl
status:
  loadBalancer: {}
---
apiVersion: v1
kind: Service
metadata:
  name: selkies-udp
  labels:
    app: selkies-udp
  namespace: desktop
spec:
  ports:
  - port: 62001
    protocol: UDP
    name: udp-one
  - port: 62002
    protocol: UDP
    name: udp-two
  selector:
    app: selkies-gstreamer-egl
